--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
+    "@types/react-html-parser": "^2.0.6",
     "@vercel/speed-insights": "^1.0.12",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-html-parser": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
