--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-html-parser": "^2.0.2"
+    "react-html-parser": "^2.0.2",
+    "react-medium-image-zoom": "^5.2.7"
   },
   "devDependencies": {
     "@types/node": "^20",
