--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@vercel/speed-insights": "^1.0.12",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
+    "quill-image-uploader": "^1.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-html-parser": "^2.0.2",
-    "react-medium-image-zoom": "^5.2.7"
+    "react-medium-image-zoom": "^5.2.7",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
