--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/react-html-parser": "^2.0.6",
     "@vercel/speed-insights": "^1.0.12",
+    "bcrypt": "^5.1.1",
+    "firebase": "^10.12.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
     "quill-image-uploader": "^1.3.0",
