--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/react-html-parser": "^2.0.6",
@@ -28,7 +29,8 @@
     "react-dom": "^18",
     "react-html-parser": "^2.0.2",
     "react-medium-image-zoom": "^5.2.7",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
