fix api message

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 MONGODB_URL=
 SECRET_TOKEN=
+SECRET_TOKEN_SFIND=
 EXPIRED_ACCESS_TOKEN=
 EXPIRED_REFRESH_TOKEN=
+EXPIRED_SFIND_TOKEN=
 NEXT_PUBLIC_API_KEY=
 NEXT_PUBLIC_APP_ID=
+NEXT_PUBLIC_TRACKING_GA=
 NEXT_PUBLIC_API_URL=
