api sfind expireTime, send message tele bot

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ NEXT_PUBLIC_API_KEY=
 NEXT_PUBLIC_APP_ID=
 NEXT_PUBLIC_TRACKING_GA=
 NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_BOT_TELEGRAM_TOKEN=
+NEXT_PUBLIC_CHAT_ID=
