--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-html-parser": "^2.0.2",
-    "react-medium-image-zoom": "^5.2.7",
     "react-quill": "^2.0.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-zoom-pan-pinch": "^3.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
