--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.3",
     "firebase": "^10.12.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
     "quill-image-uploader": "^1.3.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-html-parser": "^2.0.2",
     "react-quill": "^2.0.0",
