--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,11 @@ SECRET_TOKEN_SFIND=
 EXPIRED_ACCESS_TOKEN=
 EXPIRED_REFRESH_TOKEN=
 EXPIRED_SFIND_TOKEN=
+API_GET_ME_GOOGLE=
 NEXT_PUBLIC_API_KEY=
 NEXT_PUBLIC_APP_ID=
 NEXT_PUBLIC_TRACKING_GA=
 NEXT_PUBLIC_API_URL=
 NEXT_PUBLIC_BOT_TELEGRAM_TOKEN=
 NEXT_PUBLIC_CHAT_ID=
+NEXT_PUBLIC_CLIENT_ID=
