--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.3",
+    "cron": "^3.1.7",
     "firebase": "^10.12.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
