--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,15 +14,6 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Build Docker Image
-        run: |
-          docker build -t 26022000/sfind:latest .
-
-      - name: Push Image to Docker Hub
-        run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-          docker push 26022000/sfind:latest
-
       - name: Deploy to VPS
         uses: appleboy/ssh-action@master
         with:
@@ -30,7 +21,9 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            docker pull 26022000/sfind:latest
-            docker stop sfind || true
-            docker rm sfind || true
-            docker run --env-file /home/trungtn/code/sfind/.env -d --name sfind -p 3100:3100 26022000/sfind:latest
+            cd /home/trungtn/code/sfind
+            git pull
+            docker build -t sfind .
+            docker stop sfind-container || true
+            docker rm sfind-container || true
+            docker run -d --name sfind-container -p 3100:3100 sfind
