--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,16 +14,21 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Login Docker Hub
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
       - name: Deploy to VPS
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.VPS_IP }}
           username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_KEY }}
+          password: ${{ secrets.VPS_PASSWORD }}
+          port: 22
           script: |
-            cd /home/trungtn/code/sfind
+            cd /home/trungtn/code/sfind-old
             git pull
-            docker build -t sfind .
-            docker stop sfind-container || true
-            docker rm sfind-container || true
-            docker run -d --name sfind-container -p 3100:3100 sfind
+            docker stop sfind-old || true
+            docker rm sfind-old || true
+            docker build -t sfind-old:latest .
+            docker run -d --name sfind-old -p 3010:3010 sfind-old:latest
