--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,21 +3,12 @@ name: Docker Image CI
 on:
   push:
     branches: ["main"]
-  pull_request:
-    branches: ["main"]
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Login Docker Hub
-        run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
       - name: Deploy to VPS
         uses: appleboy/ssh-action@master
         with:
@@ -26,9 +17,11 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           port: 22
           script: |
-            cd /home/trungtn/code/sfindOld
+            cd /home/code/sfind
+            git fetch origin
+            git checkout main
             git pull
-            docker stop sfind-old || true
-            docker rm sfind-old || true
-            docker build -t sfind-old:latest .
-            docker run -d --name sfind-old -p 3100:3100 sfind-old:latest
+            docker build -t sfind-v1 .
+            docker stop sfind-v1-container  true
+            docker rm sfind-v1-container  true
+            docker run -d --name sfind-v1-container -p 3100:3100 sfind-v1
